# wasm-nes

./: .clang-format  .cmake-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  debug.sh  release.sh  run.sh
core/: CMakeLists.txt  apu.c  cartridge.c  controller.c  cpu.c  mirror.c  mmc.c  nes.c  ppu.c
core/include/: apu.h  cartridge.h  controller.h  cpu.h  mirror.h  mmc.h  nes.h  port.h  ppu.h  utils.h
core/mapper/: mapper0.c  mapper1.c  mapper2.c
core/mapper/include/: mapper0.h  mapper1.h  mapper2.h
example/static/: index.html
src/: apu.c  apu.h  bus.c  bus.h  cartridge.c  cartridge.h  controller.c  cpu.c  cpu.h  ines.c  ines.h  mapper.h  mapper0.c  mapper0.h  mapper1.c  mapper1.h  mapper2.c  mapper2.h  mirror.h  mmc.c  mmc.h  nes.c  nes.h  port.h  ppu.c  ppu.h  utils.c  utils.h
targets/debugger/: CMakeLists.txt  build.sh  command.h  dbg-nes.c  dbg-nes.h  dbg-utils.c  dbg-utils.h  main.c  stop.sh
targets/native/: CMakeLists.txt  build.sh  main.c
targets/wasm/: CMakeLists.txt  build.sh  dev.sh  main.c
targets/wasm/example/: .gitignore  package.json  server.js
targets/wasm/example/static/: index.html
tests/: readme.md  test-cpu-nestest.c  test-cpu.c
tests/instr_test-v3/: main.c  run.sh
tests/instr_timing/: main.c  run.sh
tests/nestest/: CMakeLists.txt  main.c  run.sh
tools/: build_release.sh  run_native.sh  run_wasm.sh  test_cpu.sh
