cmake_minimum_required(VERSION 3.7)

set(PROJECT_NAME nes)
project(${PROJECT_NAME} C)

if(DEFINED TEST AND NOT DEFINED WASM)
  add_definitions(-DTEST)
endif()

if(NOT DEFINED LOG_LEVEL)
  add_definitions(-DLOG_LEVEL=0)
else()
  if("${LOG_LEVEL}" STREQUAL "TRACE")
    add_definitions(-DLOG_LEVEL=4)
  elseif("${LOG_LEVEL}" STREQUAL "DEBUG")
    add_definitions(-DLOG_LEVEL=3)
  elseif("${LOG_LEVEL}" STREQUAL "OFF")
    add_definitions(-DLOG_LEVEL=0)
  else()
    message(FATAL_ERROR "Invalid LOG_LEVEL ${LOG_LEVEL}, excepted TRACE, DEBUG or OFF!")
  endif()
endif()

if(DEFINED DEBUG AND "${DEBUG}" STREQUAL "ON")
  add_definitions(-DDEBUG)
else()
  set(DEBUG "OFF")
endif()

message(STATUS "SYSTEM                    " ${CMAKE_SYSTEM_NAME})
message(STATUS "COMPILER                  " ${CMAKE_C_COMPILER})
message(STATUS "LOG_LEVEL                 " ${LOG_LEVEL})
message(STATUS "DEBUG                     " ${DEBUG})

add_subdirectory(core)
